Create square of div 16x16, addEventListener on hover changing the backgroundColor and using flexbox in css

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <script src="./script.js" defer></script>
     <h1>Etch a Sketch!</h1>
+    <div class="container"></div>
   </body>
 </html>
