Add form to enter the number of squares to have

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <script src="./script.js" defer></script>
     <h1>Etch a Sketch!</h1>
+    <div class="form">
+      <span>Number of Squares?</span>
+      <input type="number" id="inputNumber" />
+      <button>Generate</button>
+    </div>
     <div class="container"></div>
   </body>
 </html>
