--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Etch a Sketch!</h1>
     <div class="form">
       <span>Number of Squares?</span>
-      <input type="number" id="inputNumber" />
+      <input type="number" id="inputNumber" min="1" max="100" />
       <button>Generate</button>
     </div>
     <div class="container"></div>
